Starting save file management class

--- a/Visitor/Makefile
+++ b/Visitor/Makefile
@@ -1,5 +1,8 @@
-visitor:  main.cc player.o
+visitor:  main.cc player.o save_file.o
 	g++ -o visitor main.cc
 
 player.o:  player.cc
 	g++ -c player.cc
+
+save_file.o:  save_file.cc
+	g++ -c save_file.cc
