Adding GameManager class and cleaning up function names to follow google style conventions

--- a/Visitor/Makefile
+++ b/Visitor/Makefile
@@ -1,4 +1,4 @@
-visitor:  main.cc player.o save_file.o
+visitor:  main.cc player.o save_file.o game_manager.o
 	g++ -o visitor main.cc
 
 player.o:  player.cc
@@ -6,3 +6,9 @@ player.o:  player.cc
 
 save_file.o:  save_file.cc
 	g++ -c save_file.cc
+
+game_manager.o:  game_manager.cc
+	g++ -c game_manager.cc
+
+clean:
+	rm *.o visitor
