Cleaning up with a GameManager class

--- a/Fill/Makefile
+++ b/Fill/Makefile
@@ -5,8 +5,11 @@ OBJS = learn_SDL.cc
 OBJ_NAME = fill
 
 #This is the target that compiles our executable
-all : $(OBJS)
+all : $(OBJS) game_manager.o
 	g++ $(OBJS) -w -lSDL2 -o $(OBJ_NAME)
+
+game_manager.o:  game_manager.cc
+	g++ -c game_manager.cc
 
 #Don't forget to clean up after yourself
 clean:
