Creating SDLManager class and pulling display elements out of GameManager

--- a/Visitor/Makefile
+++ b/Visitor/Makefile
@@ -8,7 +8,7 @@ SRCDIR := src
 BUILDDIR := build
 SRCEXT := cc
 
-visitor:  main.cc monster.o player.o save_file.o game_manager.o
+visitor:  main.cc monster.o player.o save_file.o game_manager.o sdl_manager.o
 	$(CC) main.cc -w -lSDL2 -lSDL2_ttf -o visitor 
 
 monster.o:  monster.cc
@@ -22,6 +22,9 @@ save_file.o:  save_file.cc
 
 game_manager.o:  game_manager.cc
 	$(CC) -c game_manager.cc
+
+sdl_manager.o:  sdl_manager.cc
+	$(CC) -c sdl_manager.cc
 
 test_player:  player.o test_player_to_file.cc
 	$(CC) -o test_player_to_file.out test_player_to_file.cc
