--- a/Visitor/Makefile
+++ b/Visitor/Makefile
@@ -8,8 +8,17 @@ SRCDIR := src
 BUILDDIR := build
 SRCEXT := cc
 
-visitor:  main.cc monster.o player.o save_file.o game_manager.o sdl_manager.o
+visitor:  main.cc monster.o player.o save_file.o game_manager.o display_manager.o menus.o
 	$(CC) main.cc -w -lSDL2 -lSDL2_ttf -o visitor 
+
+display_manager.o:  display_manager.cc
+	$(CC) -c display_manager.cc
+
+game_manager.o:  game_manager.cc
+	$(CC) -c game_manager.cc
+
+menus.o:  menus.cc
+	$(CC) -c menus.cc
 
 monster.o:  monster.cc
 	$(CC) -c monster.cc
@@ -19,12 +28,6 @@ player.o:  player.cc
 
 save_file.o:  save_file.cc
 	$(CC) -c save_file.cc
-
-game_manager.o:  game_manager.cc
-	$(CC) -c game_manager.cc
-
-sdl_manager.o:  sdl_manager.cc
-	$(CC) -c sdl_manager.cc
 
 test_player:  player.o test_player_to_file.cc
 	$(CC) -o test_player_to_file.out test_player_to_file.cc
